--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -16,7 +16,7 @@ Changelog
  * The wagtailimages.Filter model has been removed, and converted to a Python class instead (Gagaro)
  * Multiple ChooserBlocks inside a StreamField are now prefetched in bulk, for improved performance (Michael van Tellingen, Roel Bruggink, Matt Westcott)
  + * Added 'tree_navigable' option to PageChooserPanel (Andy Babic)
- * Add new EmailBlock and IntegerBlock (Oktay Altay)
+ * Added EmailBlock and IntegerBlock for StreamField (Oktay Altay)
  * Added a new FloatBlock, DecimalBlock and a RegexBlock (Oktay Altay, Andy Babic)
  * Wagtail version number is now shown on the settings menu (Chris Rogers)
  * Added a system check to validate that fields listed in `search_fields` are defined on the model (Josh Schneier)
